--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,11 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
-    // Tests
-    testImplementation 'junit:junit:4.13.2'
+    // CameraX
+    implementation "androidx.camera:camera-camera2:1.0.2"
+    implementation "androidx.camera:camera-lifecycle:1.0.2"
+    implementation "androidx.camera:camera-view:1.1.0-beta01"
+
+    // ZXing
+    implementation 'com.google.zxing:core:3.3.3'
 }
