--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,13 +79,8 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
-    // CameraX
-    implementation "androidx.camera:camera-camera2:1.0.2"
-    implementation "androidx.camera:camera-lifecycle:1.0.2"
-    implementation "androidx.camera:camera-view:1.0.0-alpha31"
-
-    // ZXing
-    implementation 'com.google.zxing:core:3.3.3'
+    // Code scanner
+    implementation 'com.github.yuriy-budiyev:code-scanner:2.1.0'
 
     // Permission handling
     implementation "com.google.accompanist:accompanist-permissions:0.21.1-beta"
