--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,8 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
-        useIR = true
         freeCompilerArgs += [
-                '-Xjvm-default=enable'
+                '-Xjvm-default=all-compatibility'
         ]
     }
     buildFeatures {
@@ -48,35 +47,34 @@ android {
     packagingOptions {
         resources.excludes.add("META-INF/*")
     }
+    namespace 'com.sweak.qralarm'
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
+    // Core
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.6.1'
 
     // Jetpack Compose
-    implementation "androidx.compose.ui:ui:1.2.0-beta02"
-    implementation "androidx.compose.material:material:1.1.1"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
+    implementation "androidx.compose.ui:ui:1.3.0-rc01"
+    implementation "androidx.compose.material:material:1.2.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
-    implementation 'androidx.activity:activity-compose:1.4.0'
-    androidTestImplementation 'org.junit.jupiter:junit-jupiter'
-    androidTestImplementation 'org.junit.jupiter:junit-jupiter'
-    androidTestImplementation 'org.testng:testng:7.4.0'
-    debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
+    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation "androidx.navigation:navigation-compose:2.5.2"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
 
     // Coroutines
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
 
     // Preferences DataStore
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
 
     // Dagger Hilt
-    implementation "com.google.dagger:hilt-android:2.38.1"
-    kapt "com.google.dagger:hilt-android-compiler:2.37"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-android-compiler:2.44"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
@@ -84,13 +82,15 @@ dependencies {
     implementation 'com.github.yuriy-budiyev:code-scanner:2.1.0'
 
     // Permission handling
-    implementation "com.google.accompanist:accompanist-permissions:0.21.1-beta"
+    implementation "com.google.accompanist:accompanist-permissions:0.24.1-alpha"
 
     // Pager
-    implementation 'com.google.accompanist:accompanist-pager:0.24.1-alpha'
+    implementation 'com.google.accompanist:accompanist-pager:0.26.3-beta'
 
     // Tests
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-    androidTestImplementation 'androidx.test:runner:1.5.0-alpha03'
+    androidTestImplementation 'androidx.test:runner:1.5.0-beta01'
+    androidTestImplementation 'org.junit.jupiter:junit-jupiter'
+    androidTestImplementation 'org.testng:testng:7.4.0'
 }
