--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/androidTestResultsUserPreferences.xml
 .DS_Store
 /build
 /captures
