--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.sweak.qralarm"
         minSdk 21
         targetSdk 33
-        versionCode 7
-        versionName "1.2.1"
+        versionCode 8
+        versionName "1.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -55,16 +55,16 @@ dependencies {
     // Core
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
 
     // Jetpack Compose
-    implementation "androidx.compose.ui:ui:1.3.0-rc01"
-    implementation "androidx.compose.material:material:1.2.1"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
+    implementation "androidx.compose.ui:ui:1.4.0-alpha03"
+    implementation "androidx.compose.material:material:1.3.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.2"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
-    implementation 'androidx.activity:activity-compose:1.6.0'
-    implementation "androidx.navigation:navigation-compose:2.5.2"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
+    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.2"
 
     // Coroutines
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
@@ -90,7 +90,7 @@ dependencies {
     // Tests
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-    androidTestImplementation 'androidx.test:runner:1.5.0-beta01'
+    androidTestImplementation 'androidx.test:runner:1.5.1'
     androidTestImplementation 'org.junit.jupiter:junit-jupiter'
     androidTestImplementation 'org.testng:testng:7.4.0'
 }
