--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,17 +54,17 @@ dependencies {
 
     // Core
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
 
     // Jetpack Compose
-    implementation "androidx.compose.ui:ui:1.4.0-alpha03"
+    implementation "androidx.compose.ui:ui:1.4.0-beta02"
     implementation "androidx.compose.material:material:1.3.1"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.3.2"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.3"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.navigation:navigation-compose:2.5.3"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.3.2"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.3"
 
     // Coroutines
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
@@ -82,6 +82,7 @@ dependencies {
     implementation 'com.github.yuriy-budiyev:code-scanner:2.1.0'
 
     // Permission handling
+    //noinspection GradleDependency
     implementation "com.google.accompanist:accompanist-permissions:0.24.1-alpha"
 
     // Pager
@@ -90,7 +91,7 @@ dependencies {
     // Tests
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-    androidTestImplementation 'androidx.test:runner:1.5.1'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
     androidTestImplementation 'org.junit.jupiter:junit-jupiter'
     androidTestImplementation 'org.testng:testng:7.4.0'
 }
