--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
@@ -53,45 +54,42 @@ android {
 dependencies {
 
     // Core
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.11.0-alpha01'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
 
     // Jetpack Compose
-    implementation "androidx.compose.ui:ui:1.4.0-beta02"
-    implementation "androidx.compose.material:material:1.3.1"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.3.3"
+    implementation "androidx.compose.ui:ui:1.4.0" // 1.5.0-alpha01 caused time-picker flickering
+    implementation "androidx.compose.material:material:1.4.0"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.4.0"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
-    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation 'androidx.activity:activity-compose:1.7.0'
     implementation "androidx.navigation:navigation-compose:2.5.3"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.3.3"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.4.0"
 
     // Coroutines
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
 
     // Preferences DataStore
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
 
     // Dagger Hilt
-    implementation "com.google.dagger:hilt-android:2.44"
-    kapt "com.google.dagger:hilt-android-compiler:2.44"
+    implementation "com.google.dagger:hilt-android:2.45"
+    kapt 'com.google.dagger:hilt-android-compiler:2.45'
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
     // Code scanner
-    implementation 'com.github.yuriy-budiyev:code-scanner:2.1.0'
+    implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
 
     // Permission handling
     //noinspection GradleDependency
     implementation "com.google.accompanist:accompanist-permissions:0.24.1-alpha"
 
-    // Pager
-    implementation 'com.google.accompanist:accompanist-pager:0.26.3-beta'
-
     // Tests
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
     androidTestImplementation 'androidx.test:runner:1.5.2'
-    androidTestImplementation 'org.junit.jupiter:junit-jupiter'
-    androidTestImplementation 'org.testng:testng:7.4.0'
+    androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    androidTestImplementation 'org.testng:testng:7.7.1'
 }
