--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
         freeCompilerArgs += [
                 '-Xjvm-default=all-compatibility'
         ]
@@ -54,18 +54,18 @@ android {
 dependencies {
 
     // Core
-    implementation 'androidx.core:core-ktx:1.11.0-alpha01'
+    implementation 'androidx.core:core-ktx:1.11.0-alpha01' // 1.12.0 was compiled against SDK 34
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
 
     // Jetpack Compose
     implementation "androidx.compose.ui:ui:1.4.0" // 1.5.0-alpha01 caused time-picker flickering
-    implementation "androidx.compose.material:material:1.4.0"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.4.0"
+    implementation "androidx.compose.material:material:1.4.3"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.4.3"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
-    implementation 'androidx.activity:activity-compose:1.7.0'
+    implementation 'androidx.activity:activity-compose:1.7.2'
     implementation "androidx.navigation:navigation-compose:2.5.3"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.4.0"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.4.3"
 
     // Coroutines
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
