--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28" />
+    <uses-permission
+        android:name="android.permission.BROADCAST_CLOSE_SYSTEM_DIALOGS"
+        android:maxSdkVersion="30"
+        tools:ignore="ProtectedPermissions" />
 
     <application
         android:name="QRAlarmApp"
@@ -61,6 +65,8 @@
             </intent-filter>
 
         </receiver>
+
+        <receiver android:name=".alarm.CancelAlarmReceiver" />
 
         <service
             android:name=".alarm.QRAlarmService"
