--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ android {
         viewBinding true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion '1.5.3'
     }
     packagingOptions {
         resources.excludes.add("META-INF/*")
@@ -56,37 +56,36 @@ android {
 dependencies {
 
     // Core
-    implementation 'androidx.core:core-ktx:1.11.0-alpha01' // 1.12.0 was compiled against SDK 34
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
 
     // Jetpack Compose
-    implementation "androidx.compose.ui:ui:1.4.3"
-    implementation "androidx.compose.material:material:1.4.3"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.4.3"
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+    implementation 'androidx.compose.ui:ui:1.5.1'
+    implementation 'androidx.compose.material:material:1.5.1'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.5.1'
+    implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
     implementation 'androidx.activity:activity-compose:1.7.2'
-    implementation "androidx.navigation:navigation-compose:2.6.0"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.4.3"
+    implementation 'androidx.navigation:navigation-compose:2.7.2'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.5.1'
 
     // Coroutines
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
 
     // Preferences DataStore
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
 
     // Dagger Hilt
-    implementation "com.google.dagger:hilt-android:2.45"
-    kapt 'com.google.dagger:hilt-android-compiler:2.45'
-    kapt "androidx.hilt:hilt-compiler:1.0.0"
-    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    implementation 'com.google.dagger:hilt-android:2.48'
+    kapt 'com.google.dagger:hilt-android-compiler:2.48'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
     // Code scanner
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
 
     // Permission handling
     //noinspection GradleDependency
-    implementation "com.google.accompanist:accompanist-permissions:0.24.1-alpha"
+    implementation 'com.google.accompanist:accompanist-permissions:0.23.1'
 
     // API < 26 support for DateTime API
     // noinspection GradleDependency
@@ -94,8 +93,7 @@ dependencies {
 
     // Tests
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
     androidTestImplementation 'androidx.test:runner:1.5.2'
-    androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
-    androidTestImplementation 'org.testng:testng:7.7.1'
+    androidTestImplementation 'org.testng:testng:7.8.0'
 }
