--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     // Jetpack Compose
     implementation 'androidx.compose.ui:ui:1.5.2'
     implementation 'androidx.compose.material:material:1.5.2'
+    implementation 'androidx.compose.material3:material3:1.1.2'
     implementation 'androidx.compose.ui:ui-tooling-preview:1.5.2'
     implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
     implementation 'androidx.activity:activity-compose:1.7.2'
