Fixed a bug of alarm set indication notification not being shown after the app was updated

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,10 +53,9 @@
         </activity>
 
         <receiver
-            android:name=".alarm.BootReceiver"
+            android:name=".alarm.BootAndUpdateReceiver"
             android:enabled="true"
-            android:exported="true"
-            tools:ignore="UnusedAttribute">
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -64,6 +63,7 @@
                 <action android:name="android.intent.action.REBOOT" />
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
                 <action android:name="com.htc.intent.action.QUICKBOOT_POWERON" />
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
             </intent-filter>
 
         </receiver>
