--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,34 +49,41 @@ android {
     packagingOptions {
         resources.excludes.add("META-INF/*")
     }
+    dependenciesInfo {
+        // Do not include binary representation of app dependencies that can only be decrypted by
+        // Google in APKs. It will be included in Android App Bundles (designed for Google).
+        includeInApk = false
+        includeInBundle = true
+    }
+
     namespace 'com.sweak.qralarm'
 }
 
 dependencies {
 
     // Core
-    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.core:core-ktx:1.13.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'com.google.android.material:material:1.12.0'
 
     // Jetpack Compose
-    implementation 'androidx.compose.ui:ui:1.6.5'
+    implementation 'androidx.compose.ui:ui:1.6.7'
     implementation 'androidx.compose.material3:material3:1.2.1'
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.6.5'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.6.7'
     implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
-    implementation 'androidx.activity:activity-compose:1.8.2'
+    implementation 'androidx.activity:activity-compose:1.9.0'
     implementation 'androidx.navigation:navigation-compose:2.7.7'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.6.5'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.6.7'
 
     // Coroutines
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.0'
 
     // Preferences DataStore
-    implementation 'androidx.datastore:datastore-preferences:1.0.0'
+    implementation 'androidx.datastore:datastore-preferences:1.1.1'
 
     // Dagger Hilt
-    implementation 'com.google.dagger:hilt-android:2.49'
-    ksp 'com.google.dagger:hilt-android-compiler:2.49'
+    implementation 'com.google.dagger:hilt-android:2.51'
+    ksp 'com.google.dagger:hilt-android-compiler:2.51'
     implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
 
     // Code scanner
