Closes #43; The app now displays the 'Upcoming alarm' notification around 2 hours before the alarm is set to go off

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,6 +85,8 @@
 
         <receiver android:name=".alarm.CancelAlarmReceiver" />
 
+        <receiver android:name=".alarm.PostUpcomingNotificationBroadcastReceiver" />
+
         <service
             android:name=".alarm.QRAlarmService"
             android:enabled="true"
