Initial alarm set/cancel logic

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,13 +31,17 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.QRAlarm"
             tools:ignore="DiscouragedApi,LockedOrientationActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+
+        <service
+            android:name=".alarm.QRAlarmService"
+            android:enabled="true"
+            android:exported="false" />
 
     </application>
 
