Now posting an upcoming alarm notification when the alarm is in less than 2 hours

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,6 +85,8 @@
 
         </receiver>
 
+        <receiver android:name=".alarm.receiver.PostUpcomingAlarmNotificationReceiver" />
+
     </application>
 
 </manifest>
