PostUpcomingAlarmNotificationReceiver is now directBootAware so that upcoming alarm notifications can be posted in direct boot mode

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,7 +85,9 @@
 
         </receiver>
 
-        <receiver android:name=".alarm.receiver.PostUpcomingAlarmNotificationReceiver" />
+        <receiver
+            android:name=".alarm.receiver.PostUpcomingAlarmNotificationReceiver"
+            android:directBootAware="true" />
 
     </application>
 
