--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,8 +7,8 @@ roomKtx = "2.6.1"
 coreKtx = "1.15.0"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.3"
-composeBom = "2024.10.01"
-navigationCompose = "2.8.3"
+composeBom = "2024.11.00"
+navigationCompose = "2.7.7" # Waiting for https://issuetracker.google.com/issues/375343407 fix...
 splashscreen = "1.0.1"
 materialIconsExtended = "1.7.5"
 hiltNavigationCompose = "1.2.0"
