--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.3"
 uiViewbinding = "1.7.5"
 composeBom = "2024.11.00"
-navigationCompose = "2.7.7" # Waiting for https://issuetracker.google.com/issues/375343407 fix...
+navigationCompose = "2.8.4"
 splashscreen = "1.0.1"
 materialIconsExtended = "1.7.5"
 hiltNavigationCompose = "1.2.0"
